# AloneWork

./: README.md
.trae/documents/: AloneChat_AI_Agent_Implementation_Plan.md
.trae/rules/: acw.md
agent-framework/agent_framework/core/: types.py
agent-framework/agent_framework/deepseek_optimization/: __init__.py
agent-framework/agent_framework/deepseek_optimization/cache/: cache_engine.py
agent-framework/agent_framework/deepseek_optimization/context/: __init__.py  context_compressor.py  mega_context_manager.py  message_ranker.py
agent-framework/agent_framework/deepseek_optimization/llm/: __init__.py  deepseek_provider.py  model_config.py
alonechat-cli/: pyproject.toml
alonechat-cli/src/alonechat/: __init__.py
alonechat-cli/src/alonechat/commands/: chat.py  commit.py  generate.py  init.py
alonechat-cli/src/alonechat/config/: __init__.py
alonechat-cli/src/alonechat/models/: __init__.py
alonechat-desktop/: package.json
alonechat-desktop/src/types/: agent.ts  auth.ts  index.ts  mcp.ts  session.ts
alonework-cli/: pyproject.toml
alonework-cli/src/alonechat/: cli.py  framework_config.py
alonework-cli/test_data/: session_demo_session.jsonl
bugs/: README.md  SECURITY_VULNERABILITIES.md
chat-app/backend/: auth.py  config.py  main.py  models.py  test_mcp_api.py  websocket_manager.py
chat-app/backend/models/: __init__.py  mcp_marketplace.py
chat-app/backend/routers/: files.py  mcp_marketplace.py
chat-app/backend/schemas/: __init__.py  mcp_marketplace.py
chat-app/backend/services/: office_converter.py
docs/research/: deepseek-tui对比分析与开发计划.md
frontend/: .eslintrc.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/ui/: badge.tsx  (+4 more)
frontend/src/types/: file.ts  office.ts  workspace.ts
libreoffice-26.2.3.2/: aclocal.m4  configure  sources.ver
(+42 files in other folders)
