[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alonechat"
version = "0.1.0"
description = "国产化、终端原生、深度中文优化的AI编程Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AloneChat Team", email = "team@alonechat.ai"}
]
keywords = ["ai", "agent", "coding", "cli", "chinese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "PyYAML>=6.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
local-models = [
    "ollama>=0.1.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]

[project.scripts]
alonechat = "alonechat.cli:main"

[project.urls]
Homepage = "https://github.com/alonechat/alonechat"
Documentation = "https://docs.alonechat.ai"
Repository = "https://github.com/alonechat/alonechat"
Issues = "https://github.com/alonechat/alonechat/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
